@@ -45,7 +45,8 @@ def main(return_tagdir=False):
     # Check out tag in temp dir
     if utils.ask("Check out the tag (for tweaks or pypi/distutils "
                  "server upload)"):
-        prefix = '%s-%s-' % (vcs.name, version)
+        package = vcs.name
+        prefix = '%s-%s-' % (package, version)
         logger.info("Doing a checkout...")
         tagdir = vcs.prepare_checkout_dir(prefix)
         cmd = vcs.cmd_checkout_from_tag(version, tagdir)
@@ -66,23 +67,26 @@ def main(return_tagdir=False):
             else:
                 # First ask if we want to upload to pypi, which should
                 # always work, also without collective.dist.
-                if utils.package_in_pypi(vcs.name):
-                    logger.info("We are on PYPI.")
-                    default = True
+                use_pypi = pypi.package_in_pypi(package)
+                if not use_pypi:
+                    logger.info("This package is currently NOT registered on "
+                                "PyPI. If you want to register, you need to "
+                                "do this manually the first time.")
                 else:
-                    logger.info("We are currently NOT registered with PyPI.")
-                    default = False
-                if pypi.has_old_pypi_config(config) and utils.ask(
-                    "Register and upload to PyPI", default=default):
-                    result = getoutput('%s setup.py register sdist upload' %
-                                       sys.executable)
-                    utils.show_last_lines(result)
+                    logger.info("This package is registered on PyPI.")
+                    if pypi.has_old_pypi_config(config) and utils.ask(
+                        "Register and upload to PyPI"):
+                        result = getoutput('%s setup.py register sdist upload'
+                                           % sys.executable)
+                        utils.show_last_lines(result)
 
                 # If collective.dist is installed, the user may have
                 # defined other servers to upload to.
                 # XXX Check what needs to be done with python 2.6, where
                 # collective.dist is not needed anymore as it is built-in.
                 for server in pypi.get_distutils_servers(config):
+                    if server == 'pypi' and not use_pypi:
+                        continue
                     if utils.ask("Register and upload to %s" % server):
                         result = getoutput(
                             '%s setup.py mregister sdist mupload -r %s'
