@@ -4,7 +4,11 @@ Changelog for zest.releaser
 2.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Revert to previous behaviour: when a package has not been released
+  yet on pypi, decline to register it: the first time should be
+  deliberate and manual, to avoid accidentally uploading client
+  packages to pypi.
+  [maurits]
 
 
 2.4 (2009-05-15)
